2013-02-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (command-execute): Move from C.  Add obsolete check.
	(extended-command-history): Move from C.

2013-02-20  Ulrich Müller  <ulm@gentoo.org>

	* jka-cmpr-hook.el (jka-compr-compression-info-list)
	(jka-compr-mode-alist-additions): Handle .txz suffix for
	XZ-compressed tar archives (bug#13770).

2013-02-20  Bastien Guerry  <bzg@gnu.org>

	* outline.el (outline-regexp, outline-heading-end-regexp):
	Make variables, not options (bug#13731).

2013-02-20  Glenn Morris  <rgm@gnu.org>

	* image.el (image-current-frame): Change from variable to function.
	(image-show-frame): Rename from image-nth-frame.  Update callers.
	* image-mode.el (image-multi-frame): New variable.
	(image-mode-map, image-mode, image-goto-frame):
	Use image-multi-frame rather than image-current-frame.
	(image-mode, image-goto-frame): Use image-current-frame as
	function rather than as variable.

	* emacs-lisp/cl-lib.el (cl-floatp-safe): Make it an alias for floatp.
	* emacs-lisp/cl-macs.el (cl--make-type-test)
	(cl--compiler-macro-assoc): Use floatp rather than cl-floatp-safe.

2013-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-get-hash-table): New defun.
	(tramp-get-file-property, tramp-set-file-property)
	(tramp-get-connection-property, tramp-set-connection-property): Use it.
	(tramp-flush-file-property, tramp-flush-directory-property):
	Rename argument to KEY.
	(tramp-flush-connection-property): Simplify a little bit.
	(tramp-connection-property-p): New defun.
	(top): Reapply saved values only if there isn't a corresponding
	entry in `tramp-connection-properties'.

2013-02-19  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-indent-context):
	Fix python-info-line-ends-backslash-p call.
	(python-info-line-ends-backslash-p)
	(python-info-beginning-of-backslash): Respect line-number argument.
	(python-info-current-line-comment-p):
	Fix behavior when not at beginning-of-line.